--- a/.github/workflows/ScopeTesting.yml
+++ b/.github/workflows/ScopeTesting.yml
@@ -9,7 +9,7 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v1
-      - name: Testing for macOS
+      - name: Testing for iOS
         uses: undefinedlabs/scope-for-swift-action@v1
         with:
           dsn: ${{ secrets.SCOPE_DSN }}
